k8s/estudos-k8s-fora-do-pick/nginx-ingress/my-ingress-nginx-controller.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"meta.helm.sh/release-name":"my-ingress-nginx","meta.helm.sh/release-namespace":"ingress-nginx"},"creationTimestamp":"2026-03-12T15:51:17Z","labels":{"app.kubernetes.io/component":"controller","app.kubernetes.io/instance":"my-ingress-nginx","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"ingress-nginx","app.kubernetes.io/part-of":"ingress-nginx","app.kubernetes.io/version":"1.15.0","helm.sh/chart":"ingress-nginx [...]
    meta.helm.sh/release-name: my-ingress-nginx
    meta.helm.sh/release-namespace: ingress-nginx
  creationTimestamp: "2026-03-12T15:51:17Z"
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: my-ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.15.0
    helm.sh/chart: ingress-nginx-4.15.0
  name: my-ingress-nginx-controller
  namespace: ingress-nginx
  resourceVersion: "3710"
  uid: d1ffb037-538b-4974-9828-f805c6dec870
spec:
  clusterIP: 10.96.228.200
  clusterIPs:
  - 10.96.228.200
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - appProtocol: http
    name: http
    nodePort: 31437
    port: 80
    protocol: TCP
    targetPort: http
  - appProtocol: https
    name: https
    nodePort: 31438
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: my-ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
