k8s/estudos-k8s-fora-do-pick/nginx-ingress/blog-ingress-git.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blogging-ingress
  labels:
    app: blogging-application
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - # host: "http://<your-domain.com>"
    http:
      paths:
      - # path: /blogz
        # The below one is used to manage static files 
        path: /blogs/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: blogging-svc
            port:
              number: 80
