k8s/estudos-k8s-fora-do-pick/nginx-ingress/stream-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streaming-ingress
  labels:
    app: streaming-application
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - # host: "http://<your-domain.com>"
    http:
      paths:
      - path: /streaming/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: streaming-svc
            port:
              number: 80
